inspect-server/inspect-server/inspect_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inspect-server
spec:
  ports:
    - port: 9999
      protocol: TCP
      targetPort: 9999
  selector:
    app: inspect-server
