inspect-server/inspect-server/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: inspect
spec:
  entryPoints:
    - inspect
  routes:
  - match: HostSNI(`*`)
    services:
    - name: inspect-server
      port: 9999
